--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -29,7 +29,10 @@ jobs:
 
       # Step 3: Lint Python code
       #### 
-
+      - name: Lint Python code
+        working-directory: ./backend_flask
+        run: |
+          flake8 .
       # Step 4: Run Python tests
       ####
 
