--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -59,6 +59,17 @@ jobs:
         # Optional: List repository files to verify the docker-compose file exists
         - name: List repository files
           run: ls -al
+        
+        - name: Build Docker Image
+          run: |
+            docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/backend_flask:latest .
+            # make sure that your dockerhub repo name matches as this line (backend_flask)
+
+        - name: Log in to Docker Hub
+          run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login --username ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+          
+        - name: Push Docker Image
+          run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/backend_flask:latest
 
     # Step 7: Build docker image 
     # Go to dockerhub.com
