--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -62,7 +62,7 @@ jobs:
         
         - name: Build Docker Image
           run: |
-            docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/backend_flask:latest .
+            docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/siblmane/backend_flask:tagname .
             # make sure that your dockerhub repo name matches as this line (backend_flask)
 
         - name: Log in to Docker Hub
