--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -51,8 +51,7 @@ jobs:
     name: Deploy & Push to Docker Hub
     needs: [backend_flask]
     runs-on: ubuntu-latest
-    # Important step - add your environment name
-    # environment: PROD
+    environment: PROD
     steps:
         - uses: actions/checkout@v3
 
@@ -62,23 +61,12 @@ jobs:
         
         - name: Build Docker Image
           run: |
-            docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/backend_flask:latest .
-            # make sure that your dockerhub repo name matches as this line (backend_flask)
+            docker build -t ${{ SECRETS.DOCKERHUB_USERNAME }}/backend_flask:latest .
 
-    # Step 7: Build docker image 
-    # Go to dockerhub.com
-    # Create a new repository - backend_flask
-    # Create a new access token - <access_token>
-    # Note down your username - <username>
-    # Add the following secrets to your GitHub repository - Environment (name = TEST)
-    # add the Environment name to the deploy job above (important step)
-    # https://docs.github.com/en/actions/security-for-github-actions/security-guides/using-secrets-in-github-actions
-    #### g
+      # Step 8: Log in to Docker Hub
+        - name: Log in to Docker Hub
+          run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login --username ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
 
-    # Step 8: # Log in to Docker Hub
-    #### 
-
-
-    # Step 8: Push docker image to dockerhub
-    ####
-    
+      # Step 9: Push Docker Image
+        - name: Push Docker Image
+          run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/backend_flask:latest
